--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GSAP Portfolio</title>
 
-  <link rel="stylesheet" href="style2.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -86,7 +86,7 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js"></script>
-  <script src="script2.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
